# ai-ml-models

./: .gitmodules  README.md  base_generator.py  cli_wrapper.py  pyproject.toml  test_glif_simple.py  verify_gemini_tools.py
_tests/ai/: test_gemini_client.py
claude/: claude_generator.py
claude/utils/: claude_generator_utils.py
deepseek/: deepseek_client.py
gemini/: gemini_client.py  models.py
gemini/utils/: gemini_auth_utils.py
glif_provider/: glif_generator.py
heygen_provider/: heygen_generator.py
kling_provider/: kling_generator.py
open_router/: openrouter_generator.py
open_router/utils/: __init__.py  openrouter_async_utils.py  openrouter_client_utils.py
openai_provider/: openai_generator.py
openai_provider/utils/: openai_assistant_utils.py  openai_image_utils.py  openai_message_utils.py
pollinations/: pollinations_client.py
reachy/: reachy_client.py
